ingress-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-staging","kubernetes.io/ingress.class":"nginx"},"name":"test-ingress","namespace":"anotherone"},"spec":{"rules":[{"host":"anotherone.ryanhyma.com","http":{"paths":[{"backend":{"serviceName":"anotherone-drupal-nginx","servicePort":80}}]}}],"tls":[{"hosts":["anothertwo.ryanhyma.com"],"secretName":"anotherone-tls"}]}}
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2019-12-17T14:46:03Z"
  generation: 3
  name: test-ingress
  namespace: anotherone
  resourceVersion: "6125006"
  selfLink: /apis/extensions/v1beta1/namespaces/anotherone/ingresses/test-ingress
  uid: c10e76ba-7855-4e19-bf11-63b97d6b1f0d
spec:
  rules:
  - host: anotherone.ryanhyma.com
    http:
      paths:
      - backend:
          serviceName: anotherone-drupal-nginx
          servicePort: 80
  tls:
  - hosts:
    - anotherone.ryanhyma.com
    secretName: anotherone-tls
status:
  loadBalancer:
    ingress:
    - ip: 52.138.47.4
