pod-drupal-nginx-5c9bc4cf-w588d.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/restartedAt: "2020-02-24T12:18:17-05:00"
  creationTimestamp: "2020-03-25T06:47:01Z"
  generateName: drupal-nginx-5c9bc4cf-
  labels:
    app.kubernetes.io/instance: drupal
    app.kubernetes.io/name: drupal
    pod-template-hash: 5c9bc4cf
    tier: frontend
  name: drupal-nginx-5c9bc4cf-w588d
  namespace: drupal
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: drupal-nginx-5c9bc4cf
    uid: 296c97b9-e369-4d1f-b84b-0a869053a796
  resourceVersion: "16767654"
  selfLink: /api/v1/namespaces/drupal/pods/drupal-nginx-5c9bc4cf-w588d
  uid: 31728c88-b8cf-48b1-809b-1b7826fee45d
spec:
  containers:
  - image: ryanhyma/sitewxt_nginx:latest
    imagePullPolicy: Always
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /_healthz
        port: 80
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 1
    name: nginx
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    - containerPort: 443
      name: https
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /_healthz
        port: 80
        scheme: HTTP
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        cpu: 400m
        memory: 500Mi
      requests:
        cpu: 250m
        memory: 200Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /etc/nginx/nginx.conf
      name: cm-nginx
      readOnly: true
      subPath: nginx.conf
    - mountPath: /var/www/html/sites/default/files
      name: files-public
    - mountPath: /var/www/html/themes/custom
      name: themes
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-grj8h
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: aks-nodepool1-42293114-vmss000009
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 33
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - configMap:
      defaultMode: 420
      name: drupal-nginx
    name: cm-nginx
  - azureFile:
      secretName: drupal-storage
      shareName: drupal-public
    name: files-public
  - azureFile:
      secretName: drupal-storage
      shareName: themes
    name: themes
  - name: default-token-grj8h
    secret:
      defaultMode: 420
      secretName: default-token-grj8h
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-03-25T06:47:01Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-03-25T06:47:08Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-03-25T06:47:08Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-03-25T06:47:01Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://562861b7288253350b09e1946c36f3857fbc9e6e799c10614d62b82f60bb17f0
    image: ryanhyma/sitewxt_nginx:1.0.0
    imageID: docker-pullable://ryanhyma/sitewxt_nginx@sha256:17049b46dd94bfdad38b26a3ae62845a178e3faa71f3007ea2c31cd24cca2a6f
    lastState: {}
    name: nginx
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: "2020-03-25T06:47:08Z"
  hostIP: 10.240.0.7
  phase: Running
  podIP: 10.244.3.138
  qosClass: Burstable
  startTime: "2020-03-25T06:47:01Z"
